# detect_hw_usage

./: CMakeLists.txt  LICENSE  README.md  main.cpp  readme.txt
include/: amd_gpu_detector.hpp  cpu_detector.hpp  gpu_detector.hpp  network_detector.hpp  nvidia_gpu_detector.hpp  ram_detector.hpp  storage_detector.hpp
src/: amd_gpu_detector.cpp  cpu_detector.cpp  gpu_detector.cpp  network_detector.cpp  nvidia_gpu_detector.cpp  ram_detector.cpp  storage_detector.cpp
